<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, main!</string>
	<string name="app_name">AESCE</string>
	<string name="background">#FFFFFF</string>
	<string name="textColor">#000000</string>
	<string name="TextMainTitulo">Sistema de Captura de Datos</string>
	<string name="TextMainBtnIniciar">Iniciar Sesion</string>
	<string name="TextBtnMainSalir">Salir</string>
	<string name="TEXTlogintxvTitulo">Login</string>
	<string name="TEXTlogintxvID">ID</string>
	<string name="TEXTloginClave">Clave</string>
	<string name="TEXTloginBtnIngresar">Ingresar</string>
	<string name="TEXTloginBtnPrincipal">Principal</string>
	<string name="TEXTmenuBtnProductor">Productor</string>
	<string name="TEXTmenuBtnModInfBasica">Modulo de Informacion basica</string>
	<string name="TEXTmenuBtnModUsoTIC">Modulo uso de TIC</string>
	<string name="TEXTmenduModContactos">Modulo de contactos</string>
	<string name="TEXTmenuTxvBievenido">Bienvenido</string>
	<string name="TEXTerrorTxvError">Error </string>
	<string name="TEXTmainBtnVerMapa">Ver mi ubicacion en el mapa</string>
	<string name="TEXTmapsTitulo">Ubicacion MAPA</string>
	<string name="TEXTmapsBtnMapaSatelite">Satelital</string>
	<string name="TEXTmapsBtnPrincipal">Principal</string>
	<string name="TEXTmapsBtnMapaNormal">Normal</string>
	<string name="TEXTmenuBtnSincronizar">Sincronizar</string>
	<string name="TextProductorBtnRegresar">Regresar</string>
	<string name="TEXTproductorBtnSalir">Salir</string>
	<string name="TEXTproductorBtnNuevo">Insertar nuevo productor</string>
	<string name="TEXTproductorNuevoTxvFecha">Fecha de registro en el proyecto AESCE</string>
	<string name="TEXTproductorNuevoBtnRegistrar">Registrar</string>
	<string name="TEXTproductorNuevoDatosProductor">Datos del productor</string>
	<string name="TEXTproductorNuevoTxvNombreProd">Nombre</string>
	<string name="TEXTproductorNuevoTxvCedulaProd">Cedula</string>
	<string name="TEXTproductorNuevoFechaRegis">...</string>
	<string name="TEXTproductorNuevoTxvNumCel">Celular</string>
	<string name="TEXTproductorNuevoTxvTelFijo">Fijo</string>
	<string name="TEXTproductorNuevoTxvEmail">Correo</string>
	<string name="TEXTproductorNuevoTxvApellido1">Apellido1</string>
	<string name="TEXTproductorNuevoTxvApellido2">Apellido2</string>
	<string name="TEXTmenuProductorBtnFinca">Finca</string>
	<string name="TEXTMenuProductorBtnTIC">Modulo TIC</string>
	<string name="TEXTTICtxvCedProductor">Cedula Productor</string>
	<string name="TEXTTICtxvTelefoniaMovil">Telefonia Movil</string>
	<string name="TEXTTICTxvUsoInternet">Uso de Internet</string>
	<string name="TEXTTICTxvTelecentros">En su localidad existen Telecentros - Compartel
	</string>
	<string name="TEXTTICTXVFRECUSO">Lo usa</string>
	<string name="TEXTTIotrosEquipos">Otros equipos</string>
	<string name="TEXTTICTxvPortatil">Usa computador portatil en asuntos de su finca
	</string>
	<string name="TEXTTICTxvCamara">Usa camaras fotograficas en asuntos de su finca
	</string>
	<string name="TEXTTICTxvInfoMetereo">Cuenta con informacion metereologica para su finca
	</string>
	<string name="TEXTTICBtnIngresar">Insertar</string>
	<string name="TEXTfincaBtnNuevaFinca">Insertar Nueva Finca</string>
	<string name="TEXTfincaNuevoTxvNombreFinca">Nombre de la Finca</string>
	<string name="TEXTfincaNuevoTxvProId">Cedula del Productor</string>
	<string name="TEXTfincaNuevoGeoreferencia">Su finca esta georeferenciada</string>
	<string name="TEXTfincaNuevoTxvAso">Esta usted asociado</string>
	<string name="TEXTfincaNuevoBtnRegistrar">Registrar</string>
	<string name="TEXTfincaNuevoTxvNomAso">Nombre de la asociacion</string>
	<string name="TEXTfincaNuevoAreaTotal">Area total de la finca</string>
	<string name="TEXTfincaNuevoUnidadFinca">Unidades</string>
	<string name="TEXTfincaNuevoRegProd">Tiene registros de Produccion</string>
	<string name="TEXTfincaNuevoTxvRegManejo">de manejo de los cultivos</string>
	<string name="TEXTfincaNuevoTxvRegClima">Clima</string>
	<string name="TEXTfincaNuevoTxvUbicacionFinca">Ubicacion de la finca</string>
	<string name="TEXTfincaNuevoTxvDepartamento">Departamento</string>
	<string name="TEXTfincaNuevoTxvMunId">Municipio</string>
	<string name="TEXTfincaNuevoTxvCorregimiento">Corregimiento</string>
	<string name="TEXTfincaNuevoTxvVereda">Vereda</string>
	<string name="TEXTfincaNuevoTxvUsuId">Usuario</string>
	<string name="TEXTdepartamentoNuevoTxvDepartamento">Digite el nombre del departamento</string>
	<string name="TEXTdepartamentoNuevoBtnInsertar">Insertar</string>
	<string name="TEXTmunicipioNuevoTxvDepartamento">A que departamento pertenece</string>
	<string name="TEXTmunicipioNuevoTxvMunicipio">Digite el nombre del municipio</string>
	<string name="TEXTmenuFincaBtnContactos">Modulo de Contactos</string>
	<string name="TEXTmenuFincaBtnCitricos">Modulo Citricos</string>
	<string name="TEXTcontactosTxvDatosProductorYFinca">Datos del productor y la finca</string>
	<string name="TEXTcontactosTxvFinca">Finca</string>
	<string name="TEXTcontactosTxvContactos">Contactos</string>
	<string name="TEXTcontactosTxvNomRepAESCE">Nombre de la persona que le esta hablando del
		proyecto AESCE
	</string>
	<string name="TEXTcontactosTelRepAESCE">Telefono</string>
	<string name="TEXTcontactosTxvNomRepAso">Nombre del representante de la asociacion a la que
		usted pertenece
	</string>
	<string name="TEXTcontactosNomFunPub">Nombre del algun funcionario publico que trabaje
		directamente con usted y su cultivo
	</string>
	<string name="TEXTcontactosBtnRegistrar">Registrar</string>
	<string name="TEXTcontactosTxvNomAgriLider">Nombre de un agricultor, lider comunitario o
		similar que sea importante para usted y su cultivo
	</string>
	<string name="TEXTmodCitricosTxvFechaAESCE">Fecha de registro de la unidad de manejo (UM) o
		lote
	</string>
	<string name="TEXTmodCitricosTxvDatosUnidadManejoLote">Datos de la Unidad de Manejo o lote.</string>
	<string name="TEXTmodCitricosTxvLoteNo">Lote No.</string>
	<string name="TEXTmodCitricosTxvNArboles">Numero de arboles</string>
	<string name="TEXTmodCitricosDatosMaterialVegetal">Datos del material vegetal</string>
	<string name="TEXTmenuFincaBtnAguacate">Modulo Aguacate</string>
	<string name="TEXTmenuFincaBtnRasta">Rasta</string>
	<string name="TEXTmodRastaBtnHojaRespuestasNo1">Hoja de Respuestas No 1</string>
	<string name="TEXTModRastaBtnHojaRespuestasNo2">Hoja de Respuestas No 2</string>
	<string name="TEXTModRastaBtnHojaProcedimientos">Hoja de Procedimientos</string>
	<string name="TEXTModRastaHr1BtnCaractObserv1_2">Caracteristicas y observaciones (1,2)</string>
	<string name="TEXTModRastaHr1BtnCaractObserv3">Caracteristicas y observaciones (3)</string>
	<string name="TEXTModRastaHr1BtnCaractObserv4_5_6">Caracteristicas y observaciones (4,5,6)</string>
	<string name="TEXTModRastaHr1BtnCaractObserv7_8_9">Caracteristicas y observaciones (7,8,9)</string>
	<string name="TEXTModRastaHr1BtnPreguntasCampo">Preguntas de campo</string>
	<string name="TEXTModRastaHr1BtnAnotacionesEspeciales">Anotaciones especiales</string>
	<string name="TEXTrastaBtnRasta">Insertar nueva Rasta</string>

	<string-array name="rastaHr1Preg10to15">
		<item>Muy marcadas</item>
		<item>No hay</item>
		<item>Poco marcadas</item>
	</string-array>

	<string-array name="rastaHr1Preg10to15two">
		<item>La mañana</item>
		<item>La mañana y la tarde</item>
		<item>La tarde</item>
	</string-array>

	<string-array name="rastaHr1Preg16to123preg18">
		<item>Plantas poco afectadas</item>
		<item>Plantas muy afectadas</item>
		<item>Plantas normales</item>
		<item>No hay cultivo</item>
	</string-array>

	<string-array name="rastaHr1Preg16to123preg23">
		<item>Muy bueno (Abundante)</item>
		<item>Bueno (Normal)</item>
		<item>Regular (Cubre casi la mitad del lote)</item>
		<item>Espaciado (Parches)</item>
		<item>Sin cobertura</item>
	</string-array>

	<string-array name="rastaHr2PropInferidasCapas">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
	</string-array>

	<string-array name="rastaHr2PropInferidasMatOrganica">
		<item>Muy Alta</item>
		<item>Alta</item>
		<item>Media</item>
		<item>Baja</item>
	</string-array>

	<string-array name="rastaHr2PropInferidasDrenInterno">
		<item>Lento o Muy lento</item>
		<item>Bueno</item>
		<item>Excesivo</item>
	</string-array>

	<string-array name="rastaHr2PropInferidasDrenExterno">
		<item>Ninguno</item>
		<item>Lento</item>
		<item>Moderado</item>
		<item>Excesivo</item>
	</string-array>

	<string-array name="rastaHr2PropInferidasSaliSodi">
		<item>Alta</item>
		<item>Baja</item>
		<item>Suelo Normal</item>
	</string-array>

	<string name="TEXTmodrastahr1btnPropiedadesInferidas">Propiedades Inferidas</string>

	<string name="TEXTmodrastahr1btnPropiedadesInferidas1234">Propiedades Inferidas (1,2,3,4)</string>

	<string name="TEXTmodRastaHrProcedimientosBtnPresMoteados">Presencia de moteados</string>

	<string name="TEXTmodRastaHrProcedimientosBtnProfEfectiva">Profundidad efectiva</string>

	<string name="TEXTmodRastaHrProcedimientosBtnMatOrganica">Materia Orgánica</string>

	<string name="TEXTmodRastaHrProcedimientosBtnSalinidad">Salinidad</string>

	<string name="TEXTmodRastaHrProcedimientosBtnSodicidad">Sodicidad</string>

	<string name="TEXTfincaBtnModPlatano">Modulo Platano</string>

	<string name="TEXTmenuFincaBtnModMango">Módulo Mango</string>

	<string name="TEXTmenuFincaBtnHistoricoProduccion">Histórico de Producción</string>

	<string name="TEXTmenuFincaBtnCalidadFruta">Calidad de Fruta</string>

	<string name="TEXTRegresar">Regresar</string>

	<string name="TEXTsalir">Salir</string>

	<string name="TEXTlatitud">Latitud</string>

	<string name="TEXTlongitud">Longitud</string>

	<string name="TEXTtitulo">Sistema de captura de datos</string>

</resources>
