<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="#FFFFFF">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1"
		android:layout_marginTop="20sp">
		<ImageView android:id="@+id/imageView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/title"></ImageView>
		<TextView android:textColor="#000000" android:id="@+id/textView1"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textSize="20sp"
			android:gravity="center" android:width="500sp" android:text="@string/TEXTtitulo"></TextView>
	</LinearLayout>
	<ScrollView android:layout_height="match_parent" android:id="@+id/scrollView1" android:layout_width="match_parent">
		<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/linearLayout4">
			<TableLayout android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/tableLayout1">
				<TableRow android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/tableRow3">
					<LinearLayout android:layout_marginLeft="5sp" android:id="@+id/linearLayout5" android:layout_width="match_parent" android:layout_marginTop="20sp" android:layout_height="wrap_content">
						<Button android:onClick="OnMenuFincaBtnRegresar_Click" android:textSize="20sp" android:text="@string/TextProductorBtnRegresar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/IdMenuFincaBtnRegresar"></Button>
						<Button android:textSize="20sp" android:text="@string/TEXTproductorBtnSalir" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button2"></Button>
					</LinearLayout>
				</TableRow>
				<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
					<LinearLayout android:layout_marginTop="20sp" android:layout_marginLeft="5sp" android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginRight="10sp" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
						<Button android:text="@string/TEXTmenuFincaBtnContactos" android:layout_height="wrap_content" android:onClick="OnMenuFincaBtnContactos_Click" android:id="@+id/IdMenuFincaBtnContactos" android:layout_width="wrap_content" android:textSize="20sp"></Button>
						<Button android:text="@string/TEXTmenuFincaBtnCitricos" android:layout_height="wrap_content" android:onClick="OnMenuProductorBtnModCitricos_Click" android:id="@+id/IdMenuFincaBtnCitricos" android:layout_width="wrap_content" android:textSize="20sp"></Button>
						<Button android:text="@string/TEXTmenuFincaBtnAguacate" android:layout_height="wrap_content" android:onClick="OnMenuFincaBtnModAguacate_Click" android:id="@+id/IdMenuFincaBtnAguacate" android:layout_width="wrap_content" android:textSize="20sp"></Button>
						<Button android:layout_width="wrap_content" android:textSize="20sp" android:layout_height="wrap_content" android:id="@+id/IdMenuFincaBtnModPlatano" android:onClick="OnMenuFincaBtnModPlatano_Click" android:text="@string/TEXTfincaBtnModPlatano"></Button>
						<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:id="@+id/IdModMenuFincaBtnModMango" android:onClick="OnModMenuFincaBtnModMango_Click" android:text="@string/TEXTmenuFincaBtnModMango"></Button>
						<Button android:id="@+id/IdMenuFincaBtnHistoricoProduccion" android:text="@string/TEXTmenuFincaBtnHistoricoProduccion" android:layout_width="wrap_content" android:textSize="20sp" android:layout_height="wrap_content" android:onClick="OnMenuFincaBtnHistoricoProduccion_Click"></Button>
						<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20sp" android:text="@string/TEXTmenuFincaBtnCalidadFruta" android:id="@+id/IdMenuFincaBtnCalidadFruta" android:onClick="OnMenuFincaBtnCalidadFruta_Click"></Button>
						<Button android:text="@string/TEXTmenuFincaBtnRasta" android:layout_height="wrap_content" android:onClick="OnMenuFincaBtnModRasta_Click" android:id="@+id/IdMenuFincaBtnRasta" android:layout_width="wrap_content" android:textSize="20sp"></Button>
					</LinearLayout>
				</TableRow>
				<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
					<LinearLayout android:layout_marginTop="30sp" android:layout_marginLeft="5sp" android:layout_width="wrap_content" android:layout_marginRight="10sp" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
						<ImageView android:src="@drawable/asohofrucol" android:id="@+id/imageView2" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10sp"></ImageView>
						<ImageView android:src="@drawable/um" android:id="@+id/imageView3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10sp"></ImageView>
						<ImageView android:src="@drawable/fondo" android:id="@+id/imageView4" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10sp"></ImageView>
					</LinearLayout>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
