<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="#FFFFFF">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1"
		android:layout_marginTop="20sp">
		<ImageView android:id="@+id/imageView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/title"></ImageView>
		<TextView android:textColor="#000000" android:id="@+id/textView1"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/TextMainTitulo" android:textSize="20sp"
			android:gravity="center" android:width="500sp"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="20sp" android:id="@+id/linearLayout5" android:layout_marginLeft="5sp">
		<Button android:text="@string/TextProductorBtnRegresar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/IdModRastaHr1BtnRegresar" android:textSize="20sp" android:onClick="OnModRastaHr1BtnRegresar_Click"></Button>
		<Button android:text="@string/TEXTproductorBtnSalir" android:layout_height="wrap_content" android:id="@+id/button2" android:layout_width="wrap_content" android:textSize="20sp"></Button>
	</LinearLayout>
	<ScrollView android:layout_height="match_parent" android:id="@+id/scrollView1" android:layout_width="match_parent">
		<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/linearLayout4">
			<TableLayout android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/tableLayout1">
				<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
					<LinearLayout android:layout_marginTop="20sp" android:layout_marginLeft="5sp" android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginRight="10sp" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
						<Button android:text="@string/TEXTModRastaHr1BtnCaractObserv1_2" android:layout_height="wrap_content" android:id="@+id/IdModRastaHr1BtnCaractObserv1_2" android:layout_width="wrap_content" android:textSize="15sp" android:onClick="OnModRastaHr1BtnCaryObserv12_Click"></Button>
						<Button android:text="@string/TEXTModRastaHr1BtnCaractObserv3" android:layout_height="wrap_content" android:id="@+id/IdModRastaHr1BtnCaractObserv3" android:layout_width="wrap_content" android:textSize="15sp" android:onClick="OnModRastaHr1BtnCarYObserv3_Click"></Button>
						<Button android:layout_height="wrap_content"
	android:layout_width="wrap_content" android:textSize="15sp"
	android:id="@+id/IdModRastaHr1BtnCaractObserv4_5_6" android:text="@string/TEXTModRastaHr1BtnCaractObserv4_5_6"
	android:onClick="OnModRastaHr1BtnCarYObserv456_Click"></Button>
						<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="15sp" android:id="@+id/IdModRastaHr1BtnCaractObserv7_8_9" android:text="@string/TEXTModRastaHr1BtnCaractObserv7_8_9" android:onClick="OnModRastaHr1BtnCarYObserv789_Click"></Button>
						<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="15sp" android:id="@+id/IdModRastaHr1BtnPreguntasCampo" android:text="@string/TEXTModRastaHr1BtnPreguntasCampo" android:onClick="OnModRastaHr1BtnCarYObservPregCampo_Click"></Button>
						<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="15sp" android:id="@+id/IdModRastaHr1BtnAnotacionesEspeciales" android:text="@string/TEXTModRastaHr1BtnAnotacionesEspeciales"></Button>
					</LinearLayout>
				</TableRow>
				<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
					<LinearLayout android:layout_marginTop="30sp" android:layout_marginLeft="5sp" android:layout_width="wrap_content" android:layout_marginRight="10sp" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
						<ImageView android:src="@drawable/asohofrucol" android:id="@+id/imageView2" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10sp"></ImageView>
						<ImageView android:src="@drawable/um" android:id="@+id/imageView3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10sp"></ImageView>
						<ImageView android:src="@drawable/fondo" android:id="@+id/imageView4" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10sp"></ImageView>
					</LinearLayout>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
