<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:scrollbarAlwaysDrawHorizontalTrack="true" android:background="#FFFFFF"
	android:orientation="vertical">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1"
		android:layout_marginTop="20sp">
		<ImageView android:id="@+id/imageView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/title"></ImageView>
		<TextView android:textColor="#000000" android:id="@+id/textView1"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/TextMainTitulo" android:textSize="20sp"
			android:gravity="center" android:width="500sp"></TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout5"
		android:layout_height="wrap_content" android:layout_marginTop="20sp"
		android:layout_width="match_parent" android:layout_marginLeft="5sp"
		android:layout_marginRight="10sp">
		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/TextProductorBtnRegresar"
			android:textSize="20sp" android:id="@+id/IdMunicipioNuevoBtnRegresar" android:onClick="OnMunicipioNuevoBtnRegresar_Click"></Button>
		<Button android:id="@+id/button2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/TEXTproductorBtnSalir"
			android:textSize="20sp"></Button>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout2"
		android:layout_marginLeft="5sp" android:layout_marginRight="10sp"
		android:orientation="vertical" android:layout_marginTop="15sp">
		<TextView android:layout_height="wrap_content" android:textColor="#000000" android:textSize="18sp" android:id="@+id/TextView01" android:layout_width="wrap_content" android:text="@string/TEXTmunicipioNuevoTxvMunicipio"></TextView>
		<EditText android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/IdMunicipioNuevoEdtMunicipio"></EditText>
		<TextView android:layout_height="wrap_content" android:textColor="#000000" android:textSize="18sp" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/TEXTmunicipioNuevoTxvDepartamento" android:layout_marginTop="5sp"></TextView>
		<Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/IdMunicipioNuevoSpnDepartamento"></Spinner>
		<Button android:layout_height="wrap_content"
			android:text="@string/TEXTdepartamentoNuevoBtnInsertar"
			android:layout_width="wrap_content" android:textSize="20sp" android:id="@+id/IdMunicipioNuevoBtnInsertar" android:layout_marginTop="10sp"></Button>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout3"
		android:layout_marginTop="30sp" android:layout_marginLeft="5sp" android:layout_marginRight="10sp">
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginLeft="10sp"
			android:src="@drawable/asohofrucol" android:id="@+id/imageView2"></ImageView>
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginLeft="10sp"
			android:src="@drawable/um" android:id="@+id/imageView3"></ImageView>
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginLeft="10sp"
			android:src="@drawable/fondo" android:id="@+id/imageView4"></ImageView>
	</LinearLayout>
</LinearLayout>
