<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#FFFFFF" android:orientation="vertical">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1"
		android:layout_marginTop="20sp">
		<ImageView android:id="@+id/imageView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/title"></ImageView>
		<TextView android:textColor="#000000" android:id="@+id/textView1"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textSize="20sp" android:gravity="center" android:width="500sp"
			android:text="@string/TEXTtitulo"></TextView>
	</LinearLayout>
	<ScrollView android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/scrollView1"
		android:layout_marginLeft="5sp" android:layout_marginRight="10sp">
		<TableLayout android:id="@+id/tableLayout1"
			android:layout_width="match_parent" android:layout_height="match_parent">
			<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:layout_marginTop="20sp"
					android:id="@+id/linearLayout4">
					<Button android:layout_width="wrap_content" android:onClick="OnBtnMainIniciar_Click"
						android:textSize="20sp" android:layout_height="wrap_content" android:text="@string/TextMainBtnIniciar" android:id="@+id/IdMainBtnIniciar"></Button>
					<Button android:layout_width="wrap_content" android:textSize="20sp" android:layout_marginLeft="20sp"
						android:layout_height="wrap_content"
						android:text="@string/TEXTsalir" android:onClick="OnMainBtnSalir_Click" android:id="@+id/IdMainBtnSalir"></Button>
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:layout_marginTop="20sp"
					android:orientation="vertical" android:id="@+id/linearLayout2">
					<TextView android:layout_width="wrap_content" android:id="@+id/txvMainLatitud"
						android:layout_marginLeft="20sp" android:layout_height="wrap_content"
						android:textSize="20sp" android:textColor="#000000" android:text="@string/TEXTlatitud"></TextView>
					<TextView android:layout_width="wrap_content" android:id="@+id/txvMainLongitud"
						android:layout_marginLeft="20sp" android:layout_height="wrap_content"
						android:textSize="20sp" android:textColor="#000000"
						android:layout_marginTop="10sp" android:text="@string/TEXTlongitud"></TextView>
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:layout_marginTop="20sp"
					android:id="@+id/linearLayout5">
					<Button android:layout_width="wrap_content" android:onClick="OnMainBtnVerMapa_Click"
						android:text="@string/TEXTmainBtnVerMapa" android:textSize="20sp"
						android:id="@+id/IdMainBtnVerMapa" android:layout_height="wrap_content"></Button>
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:layout_marginTop="30sp"
					android:id="@+id/linearLayout3">
					<ImageView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/imageView2"
						android:src="@drawable/asohofrucol" android:layout_marginLeft="10sp"></ImageView>
					<ImageView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/imageView3"
						android:src="@drawable/um" android:layout_marginLeft="10sp"></ImageView>
					<ImageView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/imageView4"
						android:src="@drawable/fondo" android:layout_marginLeft="10sp"></ImageView>
				</LinearLayout>
			</TableRow>
		</TableLayout>
	</ScrollView>
</LinearLayout>
